--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
+  padding: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-link {
+  margin-left: 15px;
+  text-decoration: none;
+  color: #000;
+}
+.signup {
+  background-color: #f5072a;
+  border-radius: 20px;
+  color: #fff;
+  padding: 5px 20px;
+}
+.banner {
+  height: 80vmin;
+  background: url(./resources/bannerbackground.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.search {
+  border-radius: 20px;
+  color: gray;
+  padding: 5px 20px;
+}
+.category {
+  display: flex;
+  justify-content: center;
+}
+a {
+  text-decoration: none;
+  margin-left: 10px;
 }
 
 .App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  /* color: #61dafb; */
 }
