--- a/src/Component/SingleItem/SingleItem.css
+++ b/src/Component/SingleItem/SingleItem.css
@@ -9,11 +9,13 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin-bottom: 5px;
-  background-color: whitesmoke;
   border: 1px solid #303031;
+}
+.itemCard h3 {
+  color: rgb(243, 8, 192);
 }
 .itemCard:hover {
   box-shadow: 5px 5px 40px darkgray;
