after customizing the button with filter

--- a/src/Component/Marketing/Marketing.css
+++ b/src/Component/Marketing/Marketing.css
@@ -8,3 +8,9 @@
 .card-body img {
   margin-right: 5px;
 }
+@media (min-width: 689px) {
+  .card-deck {
+    display: flex;
+    flex-flow: column wrap;
+  }
+}
